--- a/estilos.css
+++ b/estilos.css
@@ -10,8 +10,8 @@ body {
 }
 
 .titulo-principal {
-    font-size: 24px;
-    color: #333;
+    font-size: 60px;
+    color: #000000;
     margin-bottom: 20px;
 }
 
@@ -41,7 +41,7 @@ body {
 }
 
 
-img {
+#fondo {
     position: fixed;
     top: 0;
     left: 0;
@@ -54,6 +54,7 @@ img {
 h1 {
     color: #000;
     text-align: center;
+    font-size: 1700px;
 }
 
 h2 {
@@ -133,7 +134,7 @@ input[type="text"] {
 
 .juego {
     margin: 70px auto; /* Establece un margen superior e inferior de 70px y centra horizontalmente */
-    max-width: 600px; /* Establece un ancho máximo para el elemento */
+    max-width: 700px; /* Establece un ancho máximo para el elemento */
     padding: 20px; /* Agrega un espacio interno */
     background-color: rgba(8, 92, 116, 0.7); /* Fondo blanco semitransparente más transparente */
 }
